<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mycompany</groupId>
	<artifactId>quickstart-alfresco-share</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>Quickstart of Alfresco and Share with DB and runner embedded</name>
    <packaging>pom</packaging>

    <modules>
      <module>alfresco</module>
      <module>share</module>
      <module>runner</module>
    </modules>

    <properties>
        <!-- Alfresco version/edition selection -->
        <alfresco.version>4.0.b</alfresco.version>
        <alfresco.edition>community</alfresco.edition>

        <!-- Jetty configurations used by Runner -->
        <jetty.port>8080</jetty.port>
        <jetty.stopPort>8876</jetty.stopPort>
        <jetty.jvmArgs>-Xms256m -Xmx1G -XX:PermSize=256m</jetty.jvmArgs>

        <!-- Context names used by webapps -->
        <alfresco.webapp.name>alfresco</alfresco.webapp.name>
        <share.webapp.name>share</share.webapp.name>

        <!-- Alfresco Repo configuration with embedded DB -->
        <alfresco.data.location.name>alf_data_jetty</alfresco.data.location.name>
        <alfresco.data.location>./${alfresco.data.location.name}</alfresco.data.location>
        <alfresco.db.name>alf_jetty</alfresco.db.name>
        <alfresco.db.username>alfresco</alfresco.db.username>
        <alfresco.db.password>alfresco</alfresco.db.password>
        <alfresco.db.params>MODE=PostgreSQL;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;MVCC=TRUE</alfresco.db.params>
        <alfresco.db.url>jdbc:h2:${alfresco.data.location}/h2_data/${alfresco.db.name};${alfresco.db.params}</alfresco.db.url>
        <alfresco.db.datasource.class>org.h2.jdbcx.JdbcDataSource</alfresco.db.datasource.class>

        <!-- Logging in project's root alfresco.log -->
        <log.dir></log.dir>

        <!-- Share configuration -->
        <share.log.level>info</share.log.level>
        <surf.wiring.mode>development</surf.wiring.mode><!-- "production" is the other allowed value -->
        <env>local</env>

        <!--
        Built-in multi-environment property placeholding support; to enable it on your sub-module
        * create src/main/properties/${env} folder structure
        * place <anyname>.properties and define <webapp.resource.filter> with the correct name
        -->
        <webapp.resource.filter>alfresco-global.properties</webapp.resource.filter>
        <webapp.resource.build.folder>${project.build.outputDirectory}</webapp.resource.build.folder>
        <webapp.name>${project.artifactId}</webapp.name>

        <!--
        All the properties that follows should be moved into the next-generation alfresco-parent POM
        -->

        <!-- Maven Plugins Versions -->
        <maven.compiler.version>2.3.2</maven.compiler.version>
        <maven.clean.version>2.4.1</maven.clean.version>
        <maven.dependency.version>2.4</maven.dependency.version>
        <maven.resources.version>2.5</maven.resources.version>
        <maven.install.version>2.3.1</maven.install.version>
        <maven.jar.version>2.4</maven.jar.version>
        <maven.war.version>2.2</maven.war.version>
        <maven.release.version>2.2.2</maven.release.version>
        <maven.amp.version>3.0.4</maven.amp.version>
        <maven.nosnapshot.version>0.0.8</maven.nosnapshot.version>
        <buildnumber.maven.version>1.0</buildnumber.maven.version>
        <jetty.maven.version>8.1.0.RC5</jetty.maven.version>

        <!-- Dependencies Versions -->
        <h2.version>1.3.158</h2.version>
        <h2-support.version>1.2</h2-support.version>
        <servlet.api.version>2.5</servlet.api.version>
    </properties>


    <!--
    All the code that follows should be moved into the next-generation alfresco-integration-parent POM
    -->

    <prerequisites>
        <maven>3.0.3</maven>
    </prerequisites>

    <repositories>
        <repository>
            <id>alfresco-public</id>
            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
        </repository>
        <repository>
            <id>alfresco-public-snapshots</id>
            <url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>alfresco-maven-repo</id>
            <url>http://maven.alfresco.com/nexus/content/groups/enterprise-snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>alfresco-public</id>
            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
        </pluginRepository>
        <pluginRepository>
            <id>alfresco-public-snapshots</id>
            <url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>${webapp.name}</finalName>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven.clean.version}</version>
                    <configuration>
                        <filesets>
                            <fileset>
                                <directory>${project.basedir}/${alfresco.data.location.name}</directory>
                            </fileset>
                            <fileset>
                                <directory>${project.basedir}</directory>
                                <includes>
                                    <include>alfresco.log</include>
                                    <include>${alfresco.data.location.name}</include>
                                </includes>
                            </fileset>
                        </filesets>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.version}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <nonFilteredFileExtensions>
                            <nonFilteredFileExtension>ftl</nonFilteredFileExtension>
                        </nonFilteredFileExtensions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven.dependency.version}</version>
                    <executions>
                        <execution>
                            <id>unpack-amps</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>unpack-dependencies</goal>
                            </goals>
                            <configuration>
                                <includeTypes>amp</includeTypes>
                                <outputDirectory>${project.build.directory}/${webapp.name}</outputDirectory>
                                <excludes>META*</excludes>
                            </configuration>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.alfresco.maven.plugin</groupId>
                            <artifactId>maven-amp-plugin</artifactId>
                            <version>${maven.amp.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven.war.version}</version>
                    <configuration>
                        <archiveClasses>false</archiveClasses>
                        <warSourceExcludes>tools/**</warSourceExcludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${maven.install.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven.release.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>${buildnumber.maven.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.alfresco.maven</groupId>
                    <artifactId>maven-nosnapshot-plugin</artifactId>
                    <version>${maven.nosnapshot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.mortbay.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>${jetty.maven.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.h2database</groupId>
                            <artifactId>h2</artifactId>
                            <version>${h2.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>tk.skuro.alfresco</groupId>
                            <artifactId>h2-support</artifactId>
                            <version>${h2-support.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>alfresco</artifactId>
                <version>${alfresco.version}</version>
                <type>war</type>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>share</artifactId>
                <version>${alfresco.version}</version>
                <type>war</type>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>alfresco-core</artifactId>
                <version>${alfresco.version}</version>
                <scope>provided</scope>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>alfresco-datamodel</artifactId>
                <version>${alfresco.version}</version>
                <scope>provided</scope>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>alfresco-remote-api</artifactId>
                <version>${alfresco.version}</version>
                <scope>provided</scope>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>alfresco-repository</artifactId>
                <version>${alfresco.version}</version>
                <scope>provided</scope>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>org.alfresco</groupId>
                <artifactId>alfresco-web-client</artifactId>
                <version>${alfresco.version}</version>
                <scope>provided</scope>
                <classifier>${alfresco.edition}</classifier>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>${servlet.api.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--
    All the code that follows should be moved into the next-generation alfresco-web-integration-parent POM
    -->

    <profiles>
        <profile>
            <id>enable-filtering</id>
            <activation>
                <file>
                    <exists>src/main/properties</exists>
                </file>
            </activation>
            <properties>
                <webapp.resource.folder>src/main/properties/${env}</webapp.resource.folder>
            </properties>
            <build>
                <filters>
                    <filter>${webapp.resource.folder}/${webapp.resource.filter}</filter>
                </filters>
                <resources>
                    <resource>
                        <directory>src/main/resources</directory>
                        <filtering>true</filtering>
                    </resource>
                    <resource>
                        <directory>${webapp.resource.folder}</directory>
                        <includes>
                            <include>${webapp.resource.filter}</include>
                        </includes>
                        <filtering>true</filtering>
                        <targetPath>${webapp.resource.build.folder}</targetPath>
                    </resource>
                </resources>
            </build>
        </profile>
    </profiles>
</project>
